[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fxtumblr"
version = "0.1.0"
description = "Make Tumblr embeds on other websites way better. Like TwitFix/fxtwitter, but for Tumblr."
authors = [
	{ name = "knuxify", email = "knuxify@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
	"quart",
	"quart-cors",
	"uvicorn",
	"hypercorn",
	"pytumblr",
	"redis",
	"pyyaml",
	"python-dateutil",
	"emoji",
	"markdownify",
	"nh3",
	"aiosqlite",
	"psycopg[binary]",
]

[project.optional-dependencies]
lint = [
	"flake8",
]

render-pyppeteer = [
	"pyppeteer",
]

render-playwright = [
	"playwright",
]

statstool = [
	"matplotlib",
]

[tool.hatch]
skip-install = true
